Adds a non-visual note to indicate the purpose of the navigation menu button.

--- a/styles.css
+++ b/styles.css
@@ -428,6 +428,11 @@
 		background: transparent;
 		border: 0;
 		cursor: pointer;
+		display: none;
+
+		@media screen and (width < 760px){
+			display: block;
+		}
 	}
 
 	.section {
