--- a/styles.css
+++ b/styles.css
@@ -478,6 +478,27 @@
 		margin: auto;
 	}
 
+	.skip-to-main {
+		position: absolute;
+		top: 5rem;
+		left: 1rem;
+		padding: 1rem;
+		color: var(--clr-white);
+		text-decoration: none;
+		background-color: var(--background-accent-main);
+		border-radius: var(--border-radius-2);
+
+		&:not(:focus) {
+			position: absolute;
+			height: 1px;
+			width: 1px;
+			white-space: nowrap;
+			overflow: hidden;
+			clip: rect(0 0 0 0);
+			clip-path: inset(50%);
+		}
+	}
+
 	/* FOOTER STYLES */
 	.site-footer {
 		padding-block: 2rem;
@@ -537,12 +558,12 @@
 	}
 
 	.visually-hidden {
+		position: absolute;
+		height: 1px;
+		width: 1px;
+		white-space: nowrap;
+		overflow: hidden;
 		clip: rect(0 0 0 0);
 		clip-path: inset(50%);
-		height: 1px;
-		overflow: hidden;
-		position: absolute;
-		white-space: nowrap;
-		width: 1px;
 	}
 }
