--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,8 @@
 		border-radius: var(--border-radius-3);
 
 		img {
+			width: 100%;
+			height: auto;
 			border-radius: var(--border-radius-2);
 		}
 	}
