--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@
 	.grid-auto-fit {
 		display: grid;
 		gap: 1rem;
-		grid-template-columns: repeat(auto-fit, minmax(min(18rem, 100%), 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(min(16rem, 100%), 1fr));
 	}
 
 	.site-footer,
@@ -349,6 +349,79 @@
 		background-color: var(--background-accent-main);
 		border: 0;
 		border-radius: var(--border-radius-2);
+	}
+
+	.bento {
+		--card-title-color: var(--text-high-contrast);
+
+		display: grid;
+		gap: 1rem;
+		grid-template-areas:
+			"card-one"
+			"card-two"
+			"card-three"
+			"card-four";
+
+		@media screen and (width > 640px) {
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-areas:
+				"card-one card-two"
+				"card-three card-four";
+		}
+
+		@media screen and (width > 960px) {
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-areas:
+				"card-one card-two card-four"
+				"card-three card-three card-four"
+		}
+
+		.card  {
+			& > img {
+				height: 100%;
+				object-fit: cover;
+			}
+
+			&:nth-child(1) {
+				grid-area: card-one;
+			}
+
+			&:nth-child(2) {
+				grid-area: card-two;
+			}
+
+			&:nth-child(3) {
+				grid-area: card-three;
+			}
+
+			&:nth-child(4) {
+				grid-area: card-four;
+			}
+
+			@media screen and (width > 640px) {
+				&:nth-child(even) > img {
+					order: 3;
+				}
+			}
+
+			@media screen and (width > 960px) {
+				&:nth-child(3) {
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					gap: 1rem;
+
+					img {
+						grid-column: 1 / 2;
+						grid-row: 1 / 3;
+					}
+				}
+
+				&:nth-child(4) > img {
+					order: 0;
+				}
+			}
+		}
+
 	}
 
 	.card {
