--- a/styles.css
+++ b/styles.css
@@ -553,6 +553,7 @@
 
 		@media screen and (width < 760px) {
 			display: none;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			right: 0;
@@ -563,6 +564,8 @@
 			font-weight: 700;
 			background-color: var(--background-accent-main);
 			border-end-start-radius: var(--border-radius-3);
+			transition: opacity 0.5s, display 0.5s;
+			transition-behavior: allow-discrete;
 
 			ul {
 				flex-direction: column;
@@ -578,6 +581,11 @@
 			/* Selects the primary navigation when aria-expanded is set to true on the nav button */
 			[aria-expanded="true"] ~ & {
 				display: block;
+				opacity: 1;
+
+				@starting-style {
+					opacity: 0;
+				}
 			}
 		}
     }
